<resources>
    <string name="err_remarks_val">Remarks should be more than 5 characters.</string>
    <string name="lbl_accounts">Accounts</string>
    <string name="lbl_bal_enquiry">Balance Enquiry</string>
    <string name="lbl_acc_details">Account Details</string>
    <string name="lbl_mini_stmt">Mini Statement</string>
    <string name="lbl_checkbook_request">Chequebook Request</string>
    <string name="lbl_stmt_request">Statement Request</string>
    <string name="lbl_last_five_trans">Last 5 Transactions</string>
    <string name="lbl_show_mmid">Show MMID</string>
    <string name="lbl_pps_request">Positive Pay Request</string>
    <string name="lbl_pps_request_enquiry">Positive Pay Request Enquiry</string>
    <string name="lbl_neft_enquiry">NEFT Enquiry</string>
    <string name="lbl_neft_transaction_list">NEFT Transaction List</string>
    <string name="lbl_neft_transaction_details">NEFT Transaction Details</string>
    <string name="lbl_fund_transfer">Fund Transfer</string>
    <string name="lbl_within_bank_transfer">Within Bank Transfer</string>
    <string name="lbl_imps_transfer_mob">IMPS Transfer To Mobile</string>
    <string name="lbl_imps_transfer_acc">IMPS Transfer To Account</string>
    <string name="lbl_neft_transfer_acc">NEFT Transfer To Account</string>
    <string name="lbl_self_transfer_acc">Self Transfer To Account</string>
    <string name="lbl_cheque_status">Cheque Status</string>
    <string name="lbl_stop_cheque">Stop Cheque Request</string>
    <string name="lbl_transactions">Transactions</string>
    <string name="lbl_loans">Loans</string>
    <string name="lbl_locate_atm">Locate ATM</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_branches">Branches</string>
    <string name="lbl_verify_mobile_no">Verify Mobile Number</string>
    <string name="lbl_set_server">Set Server</string>
    <string name="lbl_activate_profile_info">Activate Profile Info</string>
    <string name="lbl_activate_mpin">Activate MPIN</string>
    <string name="lbl_manage_beneficiary">Manage Beneficiaries</string>
    <string name="lbl_types_beneficiary">Beneficiary Types</string>
    <string name="lbl_about_us">About Us</string>
    <string name="lbl_activity_maps">Nearest Atm\s</string>
    <string name="lbl_activity_faq">FAQs</string>
    <string name="lbl_activity_account_statement">mPassBook</string>
    <string name="lbl_activity_settings">Settings</string>
    <string name="lbl_activity_transaction_limit">Transaction Limit</string>
    <string name="lbl_activity_block_debit_card">Block Debit Card</string>
    <string name="lbl_manage_nominee">Manage Nominee</string>
    <string name="txt_colon">:</string>
    <string name="txt_activate_profile">Activate User Profile</string>
    <string name="txt_activate_mpin">Activate MPIN</string>
    <string name="txt_activate_tpin">Activate TPIN</string>
    <string name="txt_verify_otp">Verify OTP</string>
    <string name="txt_verify_mob_no">Verify Mobile Number</string>
    <string name="txt_registration">Registration Code</string>
    <string name="txt_sim_in_slot_one">Registered Mobile Number should be in SIM SLOT ONE</string>
    <string name="txt_new_to_app">New to app? Generate secure pin for Authentication.</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="txt_have_pin_login">Already have pin? Login</string>
    <string name="txt_acc_no">Account Number</string>
    <string name="txt_leaf_count">Leaf Count</string>
    <string name="txt_cheque_type">Cheque Type</string>
    <string name="txt_no_of_checkbook">No Of ChequeBook</string>
    <string name="txt_from_date">From Date</string>
    <string name="txt_to_date">To Date</string>
    <string name="txt_beneficiary">Beneficiary</string>
    <string name="txt_ref_no">Reference No.</string>
    <string name="txt_avail_bal">AVL Bal</string>
    <string name="txt_show_mmid_msg_first">MMID allocated to your account is </string>
    <string name="txt_delete_mmid_msg_first">has been disabled for Account No. </string>
    <string name="txt_show_mmid_msg_second">You can send and receive money through IMPS Fund Transfer option.</string>
    <string name="txt_select_state">Select State</string>
    <string name="txt_select_city">Select City/Taluka</string>
    <string name="txt_search_location_pin">Search list by location, PIN code</string>
    <string name="txt_address">Address:</string>
    <string name="txt_head_office_address">Head Office Address</string>
    <string name="txt_email_addr">Email Address</string>
    <string name="txt_contact_num">Contact Number</string>
    <string name="txt_website">Website</string>
    <string name="txt_resend_otp_msg">Resend OTP will enable in 60 seconds</string>
    <string name="txt_resend_otp">Resend OTP</string>
    <string name="txt_welcome_title11">\u25CF  Balance enquiry, Mini Statement</string>
    <string name="txt_welcome_title1">\u25CF  Send money,Balance enquiry, Mini Statement</string>
    <string name="txt_welcome_title2">\u25CF  Cheque book request, Cheque Status, PPS Request</string>
    <string name="txt_welcome_title3">\u25CF  Locate bank branches and nearby ATMs</string>
    <string name="txt_welcome_title4">\u25CF  Manage beneficiaries, multiple A/c\'s</string>
    <string name="txt_verify_mob_no_note">Register Your Profile using the mobile number you have registered with your bank (for mobile alerts, IMPS, mobile banking,etc.)</string>
    <string name="txt_verify_mob_no_note1">Register Your Profile using the mobile number you have registered with your bank (for Mobile Details, Balance Enquiry, Mini Statement,etc.)</string>
    <string name="txt_verify_mob_no_note2">To confirm your mobile number, we need to send an SMS from your phone.</string>
    <string name="txt_std_charges_apply">*Standard charges may apply</string>
    <string name="txt_select_sim_sms">Select SIM to send sms</string>
    <string name="txt_select_default_sim_sms">Default SIM card will be used to send SMS</string>
    <string name="txt_within_bank">Within Bank</string>
    <string name="txt_own_bank">For Own Bank</string>
    <string name="txt_imps_acc_neft">For IMPS/NEFT to Account</string>
    <string name="txt_imps_mobile">For IMPS to Mobile</string>
    <string name="txt_upi_id">For UPI ID</string>
    <string name="txt_seach_benf">Search list by beneficiary name, IFSC etc</string>
    <string name="txt_add_ben">Add Beneficiary</string>
    <string name="hint_note_secuirty_code">(Hint: Security code will be Birth Year &amp; last 6 digits of Customer ID.\ne.g. if Birth year is 1947 and Customer Id is 71123456 then your Security Code will be 1947123456.\n(Note: If Customer ID is 4 digit, add the no. of zero\'s before the Customer ID to make it 6 digit.\ne.g. Birth Year is 1947 and Customer ID is 1234 then Security Code will be 1947001234.))</string>
    <string name="txt_client_name">Customer Name</string>
    <string name="txt_name">Name</string>
    <string name="txt_head_name">Head Name</string>
    <string name="txt_bank_name">Bank Name</string>
    <string name="txt_branch_name">Branch Name</string>
    <string name="txt_bal">Balance</string>
    <string name="txt_desc">Description</string>
    <string name="txt_to">To</string>
    <string name="txt_acc_open_date">Acct Open Date</string>
    <string name="txt_dob">Date of Birth</string>
    <string name="txt_client_mob_no">Mobile Number</string>
    <string name="txt_phone_no">Phone Number</string>
    <string name="txt_addr">Address</string>
    <string name="txt_nationality">Nationality</string>
    <string name="txt_ac_name">A/c Name</string>
    <string name="txt_ac_no">A/c No.</string>
    <string name="txt_mob_no">Mob No.</string>
    <string name="txt_from_account">From A/C</string>
    <string name="txt_select_deposit_type">Select Deposit Type</string>
    <string name="txt_select_interest_calculation_method">Select Interest Calculation Method</string>
    <string name="txt_select_compunding_frequency">Select Compunding Frequency</string>
    <string name="txt_select_period_type">Select Period Type</string>
    <string name="txt_from_upi_id">From UPI Id</string>
    <string name="txt_linked_account_no">Linked Account</string>
    <string name="txt_debited_account">Debited A/C</string>
    <string name="txt_to_account">To A/C</string>
    <string name="txt_to_beneficery">To Beneficiary</string>
    <string name="txt_payees_upi_id">Payees UPI ID</string>
    <string name="txt_email_id">Email Id (Optional)</string>
    <string name="txt_mob_banking">Mobile Banking</string>
    <string name="txt_relation">Relation</string>
    <string name="txt_nominee_action">Nominee Action</string>
    <string name="txt_for_account">For Account</string>
    <string name="txt_nominee">Nominee</string>
    <string name="txt_guardian_relation">Relation With Nominee</string>
    <string name="txt_nominee_guardian_dtl">Nominee Guardian Details</string>
    <string name="check_agree_terms_conditions">I agree with the Terms &amp; Conditions </string>
    <string name="hint_mobile_no">Enter Mobile Number</string>
    <string name="txt_Activate_FP">Activate Fingerprint</string>
    <string name="hint_pin">Enter Pin</string>
    <string name="hint_forgot_login_pin">Forgot Login Pin?</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="hint_mpin">Enter MPIN</string>
    <string name="hint_tpin">Enter TPIN</string>
    <string name="hint_period">Period</string>
    <string name="hint_enter_interest_rate">Enter Interest Rate</string>
    <string name="hint_enter_installment_amount">Enter Installment Amount</string>
    <string name="hint_account_name">Enter Account Name</string>
    <string name="hint_account_number">Enter Account Number</string>
    <string name="hint_confirm_account_number">Confirm Account Number</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_remarks">Remarks</string>
    <string name="hint_mobile_number">Mobile No.</string>
    <string name="hint_mmid">MMID</string>
    <string name="hint_ifsc">IFSC</string>
    <string name="hint_upiid">UPI ID</string>
    <string name="hint_custname">Customer Name</string>
    <string name="hint_nickname">Enter Nickname</string>
    <string name="hint_mob_no">Enter Mobile Number</string>
    <string name="hint_upi_id">Enter UPI ID</string>
    <string name="hint_enter_mmid">Enter MMID</string>
    <string name="hint_confirm_mmid">Confirm MMID</string>
    <string name="hint_ifsc_code">Enter IFSC Code</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_security_code">Security Code</string>
    <string name="hint_mpin_id">MPIN</string>
    <string name="hint_tpin_id">TPIN</string>
    <string name="hint_confirm_mpin">Confirm MPIN</string>
    <string name="hint_confirm_tpin">Confirm TPIN</string>
    <string name="hint_old_tpin">Old TPIN</string>
    <string name="hint_old_mpin">Old MPIN</string>
    <string name="hint_new_tpin">New TPIN</string>
    <string name="hint_new_mpin">New MPIN</string>
    <string name="hint_name_one">First Name</string>
    <string name="hint_name_two">Middle Name</string>
    <string name="hint_name_three">Last Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_enter_percent">Enter Percentage</string>
    <string name="hint_dob">Select Date Of Birth</string>
    <string name="hint_guardian_name">Guardian Name</string>
    <string name="hint_guardian_address">Guardian Address</string>
    <string name="btn_login">Login</string>
    <string name="btn_otp">Get OTP</string>
    <string name="btn_get_verification_code">Get Verification Code</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_send">Send</string>
    <string name="btn_done">Done</string>
    <string name="btn_save">Save</string>
</resources>