<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayoutPin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:filterTouchesWhenObscured="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/txt_colon"
                android:scaleType="center"
                android:src="@drawable/verify_mobile_img" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/txt_activate_tpin"
                android:textColor="?attr/textColorPrimaryDark"
                android:textSize="@dimen/text_20sp"
                android:textStyle="bold"
                android:typeface="serif" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_note_secuirty_code"
                android:textSize="@dimen/text_14sp"
                android:typeface="serif"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/etTPinId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_tpin_id"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:singleLine="true"
                    android:typeface="serif"
                    android:longClickable="false"
                    android:textIsSelectable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/etConfrimTPINId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_tpin"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:singleLine="true"
                    android:typeface="serif"
                    android:longClickable="false"
                    android:textIsSelectable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnActivationDone"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/textColorPrimary"
                android:text="@string/btn_done"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="@dimen/text_14sp"
                android:typeface="serif" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
