<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NomineeActivity"
    android:filterTouchesWhenObscured="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.trustbank.activity.NomineeActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/LLparentId"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/setNomineeLayoutId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/backgroundColor"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textForAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_for_account"
                        android:textSize="@dimen/text_16sp"
                        android:typeface="serif"/>

                    <Spinner
                        android:id="@+id/spinnerForAcc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/spinner_border"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/textNomineeAction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_nominee_action"
                        android:textSize="@dimen/text_16sp"
                        android:typeface="serif"/>

                    <Spinner
                        android:id="@+id/spinnerNomineeAction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/spinner_border"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/textNominee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_nominee"
                        android:textSize="@dimen/text_16sp"
                        android:typeface="serif" />

                    <Spinner
                        android:id="@+id/spinnerNominee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/spinner_border"
                        android:padding="10dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etName1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name_one"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:typeface="serif" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etName2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name_two"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:typeface="serif" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etName3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name_three"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:typeface="serif" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etDOB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/hint_dob"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="@dimen/activity_horizontal_margin"
                            android:typeface="serif" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etNomineeCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_city"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:typeface="serif" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textRelation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_relation"
                        android:textSize="@dimen/text_16sp"
                        android:typeface="serif"/>

                    <Spinner
                        android:id="@+id/spinnerRelation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/spinner_border"
                        android:padding="10dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etNomineePercent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_enter_percent"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:typeface="serif" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/setGuardianLayoutId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/roundborder"
                        android:orientation="vertical"
                        android:visibility="gone"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textGuardianDtl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/txt_nominee_guardian_dtl"
                            android:textSize="@dimen/text_16sp"
                            android:typeface="serif"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <EditText
                                android:id="@+id/etGuardianName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_guardian_name"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:typeface="serif" />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <EditText
                                android:id="@+id/etGuardianAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_guardian_address"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:typeface="serif" />

                        </com.google.android.material.textfield.TextInputLayout>
                        <TextView
                            android:id="@+id/textGuardianRelation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/txt_guardian_relation"
                            android:textSize="@dimen/text_16sp"
                            android:typeface="serif"/>

                        <Spinner
                            android:id="@+id/spinnerGuardianRelation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/spinner_border"
                            android:padding="10dp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSaveNominee"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="10dp"
                        android:background="?attr/textColorPrimary"
                        android:text="@string/btn_save"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold"
                        android:typeface="serif" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <include layout="@layout/custom_horizontal_recycler_view" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>