<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etFundTransferOtpId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_otp"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="6"
                        android:singleLine="true"
                        android:typeface="serif"
                        android:longClickable="false"
                        android:textIsSelectable="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txtCounterId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_resend_otp_msg"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/text_16sp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/txtResendOtpId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_resend_otp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@color/colorLightGray"
                    android:textSize="@dimen/text_16sp"
                    android:typeface="serif"
                    android:enabled="false"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etTpinId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etFundTransferMpinId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_tpin"
                        android:inputType="numberPassword"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:typeface="serif"
                        android:longClickable="false"
                        android:textIsSelectable="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnWithBankNextId"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="?attr/textColorPrimary"
                    android:text="@string/btn_done"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_14sp"
                    android:textStyle="bold"
                    android:typeface="serif" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>